added header file samples

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "D:\\Users\\okan\\Desktop\\ozan\\OneDrive\\Projects\\VSCODE\\test-c\\vso-test-c\\main.exe", 
+            "program": "D:\\Users\\okan\\Desktop\\ozan\\OneDrive\\GITHUB\\clang\\bin\\main.exe", 
             "args": [],
             "stopAtEntry": true,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}\\bin",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
