--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,9 +8,10 @@
 			"args": [
 				"-g3",
 				"-O0",
-				"${file}",
+				"-lm",
+				"${workspaceFolder}\\src\\*.c",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${workspaceFolder}\\bin\\${fileBasenameNoExtension}.exe"
 			],
 			"options": {
 				"cwd": "C:\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin"
