--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "stdbool.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "cmath": "c",
+        "*.tcc": "c"
     }
 }
